split project in modules: core, cli